[package]
name = "sac"
description = "A macro for constructing collections"
version = "0.2.1"
readme = "README.md"
license = "MIT"
authors = ["Kai Patrick <thiskaiguy@gmail.com>"]
repository = "https://github.com/thisKai/sac"
# build = "build_skeptic_tests.rs"

[dependencies]

# [build-dependencies]
# skeptic = "0.13"

# [dev-dependencies]
# skeptic = "0.13"
